feat: add push/replace method for router api

--- a/dev/main-react16/src/global.less
+++ b/dev/main-react16/src/global.less
@@ -53,10 +53,16 @@ ol {
   }
 }
 
-.btn-con {
-  margin-bottom: 10px;
-}
-
 micro-app, micro-app-body{
   width: 100%;
+}
+
+.btn-con {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5px;
+
+  button {
+    margin: 2px;
+  }
 }
