feat: add beforeEach&afterEach hook for router

--- a/dev/main-react16/src/global.less
+++ b/dev/main-react16/src/global.less
@@ -61,6 +61,7 @@ micro-app, micro-app-body{
   display: flex;
   flex-direction: column;
   margin-bottom: 5px;
+  padding-right: 5px;
 
   button {
     margin: 2px;
