feat: patch proxyDocument of createElement

--- a/dev/main-react16/src/pages/document.ejs
+++ b/dev/main-react16/src/pages/document.ejs
@@ -23,7 +23,7 @@
     />
     <title>Micro App</title>
     <link rel="icon" href="<%= context.config.publicPath +'favicon.ico'%>" type="image/x-icon" />
-    <script crossorigin src="https://sgm-static.jd.com/sgm-2.8.0.js" name="SGMH5" sid="6f88a6e4ba4b4ae5acef2ec22c075085" appKey="jdb-adminb2b-pc"></script>
+    <!-- <script crossorigin src="https://sgm-static.jd.com/sgm-2.8.0.js" name="SGMH5" sid="6f88a6e4ba4b4ae5acef2ec22c075085" appKey="jdb-adminb2b-pc"></script> -->
   </head>
   <body>
     <noscript>Out-of-the-box mid-stage front/design solution!</noscript>
