--- a/dev/main-react16/src/global.less
+++ b/dev/main-react16/src/global.less
@@ -58,7 +58,7 @@ micro-app, micro-app-body{
 }
 
 .btn-con {
-  display: flex;
+  display: flex!important;
   flex-direction: column;
   margin-bottom: 5px;
   padding-right: 5px;
