--- a/dev/children/react16/src/index.css
+++ b/dev/children/react16/src/index.css
@@ -7,9 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-:global{
+/*
+:global(.ocssContainer) {
   @media (max-width: 575px){}
+  .abc {
+    color: red;
+  }
 }
+*/
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -47,8 +52,4 @@ code {
     display: flex;
     float: none;
   }
-}
-
-:global{
-  @media (max-width: 575px){}
 }
